# Final-Project

./: .env  .gitignore  .pylintrc  app.py  docker-compose.yml  models.py  package-lock.json  package.json  pyproject.toml  requirements.txt  turbo.json  uv.mdc
.cursor/rules/: fastapi.mdc  feature_workflow.mdc  sqlalchemy.mdc  supabase.mdc  vite.mdc
apps/backend/: .dockerignore  .env  .env.example  .gitignore  .pylintrc  Dockerfile  README.md  alembic.ini  auth.py  config.py  db.py  db_blog.py  db_supabase.py  deps.py  email_sender.py  entrypoint.sh  main.py  middleware.py  nodemon.json  package.json  pyproject.toml  rawg_visited_pages.json  requirements.txt  router_blogs.py  router_cart.py  router_games.py  router_orders.py  router_products.py  router_users.py  routers.py  sqlitedb.db
apps/frontend/: .dockerignore  .env  .gitignore  Dockerfile  (+5 more)
backend/: .env.example  pyproject.toml
backend/app/: config.py
backend/app/db/: database.py
backend/config/: database.py
backend/models/: __init__.py  base.py  cart.py  game.py  order.py  user.py
doc.text/: README.md  acknowledgements.md  chapter1_introduction.md  chapter2_literature_review.md  chapter3_technology_and_tools.md  chapter4_software_product_requirements.md  chapter5_development_methodologies.md  chapter6_design_and_implementation.md  chapter7_conclusions.md  report.text  table_of_contents.md
docs/: frontend-auth-refactor.md
frontend/: README.md  package-lock.json  package.json
game-store/: README.md  package-lock.json
scripts/: task-complexity-report.json
tests/: test_auth.py  test_games.py
(+212 files in other folders)
