[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend API for the Final Project"
authors = ["Your Name <you@example.com>"]         # TODO: Update with your info
readme = "README.md"                              # Optional: create a README.md later

[tool.poetry.dependencies]
python = "^3.10"                                                # Adjust based on your Python version
fastapi = "^0.110.0"                                            # Using a recent version, adjust if needed
uvicorn = { extras = ["standard"], version = "^0.28.0" }
sqlalchemy = "^2.0.28"
psycopg2-binary = "^2.9.9"                                      # Or your specific DB driver
alembic = "^1.13.1"
pydantic = { extras = ["email"], version = "^2.6.4" }
python-dotenv = "^1.0.1"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
